[gd_scene load_steps=24 format=3 uid="uid://bhpm0vitpjhqg"]

[ext_resource type="Script" uid="uid://csmfrsfesfy1e" path="res://CardGame/CardGameScene.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://buv2lqggk5c8l" path="res://Characters/Danila/danila_neutral.png" id="2"]
[ext_resource type="Texture2D" uid="uid://bfbokjdhwgl61" path="res://Factory/fog.png" id="2_a1da2"]
[ext_resource type="Texture2D" uid="uid://dpudwm5cmtr1x" path="res://Characters/Worker/worker_neutral.png" id="3"]
[ext_resource type="Shader" uid="uid://cjn4lqefwp33x" path="res://Shaders/Blur.gdshader" id="4"]
[ext_resource type="Texture2D" uid="uid://cou1ngp80uxs5" path="res://boardgamePackAsset/PNG/Chips/chipBlueWhite.png" id="5"]
[ext_resource type="Texture2D" uid="uid://b4es2b42hg7po" path="res://boardgamePackAsset/PNG/Chips/chipRedWhite.png" id="6"]
[ext_resource type="Shader" uid="uid://cmealmhe7nt1h" path="res://Shaders/Glitch.gdshader" id="7"]
[ext_resource type="Texture2D" uid="uid://buamyuvmsy522" path="res://Factory/light_cone_texture.png" id="10"]
[ext_resource type="Shader" uid="uid://bvp5shvch67el" path="res://Shaders/DropShadow.gdshader" id="11"]
[ext_resource type="Texture2D" uid="uid://db70102ovdgif" path="res://boardgamePackAsset/PNG/Cards/cardBack_red2.png" id="12"]
[ext_resource type="Texture2D" uid="uid://dm5l84x5r3p8c" path="res://boardgamePackAsset/PNG/Cards/cardBack_blue2.png" id="13"]

[sub_resource type="Environment" id="Environment_glow"]
background_mode = 3
glow_enabled = true
glow_levels/1 = 1.0
glow_levels/2 = 1.0
glow_levels/3 = 0.5
glow_levels/5 = 0.5
glow_intensity = 1.0
glow_blend_mode = 0
glow_hdr_threshold = 1.3

[sub_resource type="Gradient" id="Gradient_smoke_alpha"]
offsets = PackedFloat32Array(0, 0.2, 0.8, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 0.1, 1, 1, 1, 0.05, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_smoke"]
gradient = SubResource("Gradient_smoke_alpha")

[sub_resource type="Curve" id="Curve_smoke_scale"]
_data = [Vector2(0, 0.6), 0.0, 0.0, 0, 0, Vector2(1, 1.4), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_smoke_scale"]
curve = SubResource("Curve_smoke_scale")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_smoke"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(150, 100, 1)
direction = Vector3(0, -1, 0)
spread = 10.0
initial_velocity_min = 2.0
initial_velocity_max = 5.0
angular_velocity_min = -5.0
angular_velocity_max = 5.0
gravity = Vector3(0, -2, 0)
scale_max = 2.0
scale_curve = SubResource("CurveTexture_smoke_scale")
color_ramp = SubResource("GradientTexture1D_smoke")
turbulence_enabled = true
turbulence_noise_strength = 0.5
turbulence_noise_scale = 4.0

[sub_resource type="LabelSettings" id="LabelSettings_score"]
font_size = 32
outline_size = 8
outline_color = Color(0, 0, 0, 1)
shadow_size = 4
shadow_color = Color(0, 0, 0, 0.5)
shadow_offset = Vector2(2, 2)

[sub_resource type="LabelSettings" id="LabelSettings_button"]
font_size = 24
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_blur"]
shader = ExtResource("4")
shader_parameter/lod = 2.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_boss_glitch"]
shader = ExtResource("7")
shader_parameter/shake_power = 0.0
shader_parameter/color_rate = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_shadow"]
shader = ExtResource("11")
shader_parameter/shadow_color = Color(0, 0, 0, 0.5)
shader_parameter/shadow_offset = Vector2(15, 15)

[node name="CardGameScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_glow")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.1, 0.1, 0.15, 1)

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.15, 0.1, 1)

[node name="Lamp" type="Node2D" parent="."]
position = Vector2(960, -100)

[node name="SmokeParticles" type="GPUParticles2D" parent="Lamp"]
position = Vector2(0, 200)
amount = 24
texture = ExtResource("2_a1da2")
lifetime = 6.0
preprocess = 3.0
randomness = 0.3
visibility_rect = Rect2(-300, -300, 600, 1000)
process_material = SubResource("ParticleProcessMaterial_smoke")

[node name="LightCone" type="PointLight2D" parent="Lamp"]
modulate = Color(0.99600214, 0.94642586, 0.93225205, 1)
light_mask = 0
visibility_layer = 0
position = Vector2(0, 1143.5999)
rotation = 6.2831855
scale = Vector2(1.2, 2.023828)
color = Color(0.99999994, 0.8457737, 0.7454368, 1)
energy = 5.18
texture = ExtResource("10")

[node name="LampBody" type="TextureRect" parent="Lamp"]
modulate = Color(0.1, 0.1, 0.1, 1)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_right = 150.0
offset_bottom = 120.0
grow_horizontal = 2
texture = ExtResource("5")
expand_mode = 1
stretch_mode = 5

[node name="UI" type="CanvasLayer" parent="."]

[node name="TopInfo" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 100.0
grow_horizontal = 2

[node name="MatchScoreLabel" type="Label" parent="UI/TopInfo"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "СЧЕТ МАТЧА: 0 - 0 | Побед нужно: 3"
label_settings = SubResource("LabelSettings_score")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatusLabel" type="Label" parent="UI/TopInfo"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 40.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_score")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BottomInfo" type="HBoxContainer" parent="UI"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -60.0
offset_right = -50.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 50

[node name="BalanceLabel" type="Label" parent="UI/BottomInfo"]
unique_name_in_owner = true
layout_mode = 2
text = "Баланс: 1000$"
label_settings = SubResource("LabelSettings_score")

[node name="BetLabel" type="Label" parent="UI/BottomInfo"]
unique_name_in_owner = true
modulate = Color(1, 1, 0.4, 1)
layout_mode = 2
text = "Ставка: 0$"
label_settings = SubResource("LabelSettings_score")

[node name="ButtonsArea" type="HBoxContainer" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 50
alignment = 1

[node name="HitButton" type="TextureButton" parent="UI/ButtonsArea"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture_normal = ExtResource("5")
texture_pressed = ExtResource("5")
texture_hover = ExtResource("5")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="UI/ButtonsArea/HitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "ВЗЯТЬ"
label_settings = SubResource("LabelSettings_button")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StandButton" type="TextureButton" parent="UI/ButtonsArea"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture_normal = ExtResource("6")
texture_pressed = ExtResource("6")
texture_hover = ExtResource("6")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="UI/ButtonsArea/StandButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "СТОП"
label_settings = SubResource("LabelSettings_button")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextRoundButton" type="Button" parent="UI/ButtonsArea"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(250, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "СЛЕД. РАУНД"

[node name="NewGameButton" type="Button" parent="UI/ButtonsArea"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(250, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "НОВЫЙ МАТЧ"

[node name="BettingOverlay" type="ColorRect" parent="UI"]
unique_name_in_owner = true
visible = false
z_index = 20
material = SubResource("ShaderMaterial_blur")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="CenterContainer" type="CenterContainer" parent="UI/BettingOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/BettingOverlay/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Label" type="Label" parent="UI/BettingOverlay/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "СТАВКА НА МАТЧ (ДО 3 ПОБЕД)"
label_settings = SubResource("LabelSettings_score")
horizontal_alignment = 1

[node name="InternalBalanceLabel" type="Label" parent="UI/BettingOverlay/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 0.5, 1)
layout_mode = 2
text = "ВАШ БАЛАНС: 30$"
label_settings = SubResource("LabelSettings_score")
horizontal_alignment = 1

[node name="BegButton" type="Button" parent="UI/BettingOverlay/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(300, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "ВЫПРОСИТЬ АВАНС (30$)"

[node name="StealButton" type="Button" parent="UI/BettingOverlay/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(300, 70)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 26
text = "УКРАСТЬ БАНКУ ВАРЕНЬЯ"

[node name="BetsHBox" type="HBoxContainer" parent="UI/BettingOverlay/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 25

[node name="Bet10" type="Button" parent="UI/BettingOverlay/CenterContainer/VBoxContainer/BetsHBox"]
custom_minimum_size = Vector2(130, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "10$"

[node name="Bet50" type="Button" parent="UI/BettingOverlay/CenterContainer/VBoxContainer/BetsHBox"]
custom_minimum_size = Vector2(130, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "50$"

[node name="Bet100" type="Button" parent="UI/BettingOverlay/CenterContainer/VBoxContainer/BetsHBox"]
custom_minimum_size = Vector2(130, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "100$"

[node name="BetAll" type="Button" parent="UI/BettingOverlay/CenterContainer/VBoxContainer/BetsHBox"]
custom_minimum_size = Vector2(130, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "VA-BANK"

[node name="IntroOverlay" type="ColorRect" parent="UI"]
unique_name_in_owner = true
visible = false
z_index = 20
material = SubResource("ShaderMaterial_blur")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 0.95)

[node name="CenterContainer" type="CenterContainer" parent="UI/IntroOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/IntroOverlay/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Title" type="Label" parent="UI/IntroOverlay/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "ОЧКО / 21: ТУРНИР"
label_settings = SubResource("LabelSettings_score")
horizontal_alignment = 1

[node name="Rules" type="Label" parent="UI/IntroOverlay/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "1. Играем матч до 3-х побед.
2. Ставка делается ОДИН раз на весь матч.
3. Победитель матча забирает всё (x2).
4. Правила раздачи классические.
5. Не зли Данилу и Рабочего."
horizontal_alignment = 1

[node name="StartGameButton" type="Button" parent="UI/IntroOverlay/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "НАЧАТЬ ТУРНИР"

[node name="BossOverlay" type="ColorRect" parent="UI"]
unique_name_in_owner = true
visible = false
z_index = 20
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="BossSprite" type="TextureRect" parent="UI/BossOverlay"]
material = SubResource("ShaderMaterial_boss_glitch")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="BossText" type="Label" parent="UI/BossOverlay"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -150.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
text = "ТЫ УВОЛЕН!!!"
label_settings = SubResource("LabelSettings_score")
horizontal_alignment = 1

[node name="GameOverLabel" type="Label" parent="UI/BossOverlay"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "ИГРА ОКОНЧЕНА"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="UI/BossOverlay"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "НАЧАТЬ ЗАНОВО"

[node name="BossContinueButton" type="Button" parent="UI/BossOverlay"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "ПОНЯЛ..."

[node name="ExitButton" type="Button" parent="UI"]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
grow_horizontal = 0
text = "ВЫЙТИ"

[node name="SkipButton" type="Button" parent="UI"]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -370.0
offset_top = 20.0
offset_right = -170.0
offset_bottom = 60.0
grow_horizontal = 0
text = "ПРОПУСТИТЬ"

[node name="Decorations" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="Chip1" type="TextureRect" parent="Decorations"]
layout_mode = 0
offset_left = 126.0
offset_top = 512.0
offset_right = 190.0
offset_bottom = 576.0
rotation = -0.523599
texture = ExtResource("5")

[node name="Chip2" type="TextureRect" parent="Decorations"]
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 114.0
offset_bottom = 114.0
rotation = 0.261799
texture = ExtResource("6")

[node name="DanilaContainer" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.05
anchor_top = 0.4
anchor_right = 0.3
anchor_bottom = 1.0
scale = Vector2(1.1, 1.1)
pivot_offset = Vector2(100, 300)
mouse_filter = 2

[node name="DanilaPortrait" type="TextureRect" parent="DanilaContainer"]
material = SubResource("ShaderMaterial_shadow")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 5

[node name="WorkerContainer" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.75
anchor_top = 0.15
anchor_right = 0.95
anchor_bottom = 1.0
mouse_filter = 2

[node name="WorkerPortrait" type="TextureRect" parent="WorkerContainer"]
material = SubResource("ShaderMaterial_shadow")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -126.0
offset_top = 76.0
offset_right = -39.0
offset_bottom = 151.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3")
expand_mode = 1
stretch_mode = 5
flip_h = true

[node name="DealerScoreLabel" type="Label" parent="WorkerContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -79.0
offset_top = 207.0
offset_right = -79.0
offset_bottom = 252.0
grow_horizontal = 2
text = "Дилер: ?"
label_settings = SubResource("LabelSettings_score")
horizontal_alignment = 1

[node name="TableArea" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="DealerHand" type="HBoxContainer" parent="TableArea"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 660.0
offset_top = 297.0
offset_right = 1260.0
offset_bottom = 597.0
theme_override_constants/separation = -40
alignment = 1

[node name="DummyCard1" type="TextureRect" parent="TableArea/DealerHand"]
layout_mode = 2
texture = ExtResource("12")
expand_mode = 1
stretch_mode = 5

[node name="DummyCard2" type="TextureRect" parent="TableArea/DealerHand"]
layout_mode = 2
texture = ExtResource("12")
expand_mode = 1
stretch_mode = 5

[node name="PlayerHand" type="HBoxContainer" parent="TableArea"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 660.0
offset_top = 600.0
offset_right = 1260.0
offset_bottom = 1000.0
theme_override_constants/separation = -40
alignment = 1

[node name="DummyCard1" type="TextureRect" parent="TableArea/PlayerHand"]
layout_mode = 2
texture = ExtResource("13")
expand_mode = 1
stretch_mode = 5

[node name="DummyCard2" type="TextureRect" parent="TableArea/PlayerHand"]
layout_mode = 2
texture = ExtResource("13")
expand_mode = 1
stretch_mode = 5

[node name="PlayerScoreLabel" type="Label" parent="TableArea"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 61.0
offset_top = 361.0
offset_right = 661.0
offset_bottom = 406.0
text = "Вы: 0"
label_settings = SubResource("LabelSettings_score")
horizontal_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
